fixing spacing between cards with wrong/correct added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,19 +86,19 @@ word-spacing: -2px;
 
 .card3 {
     border: 1px solid white;
-    margin: -350px 700px;
+    margin: -418px 700px;
     visibility: hidden;
 }
 
 .card4 {
     border: 1px solid white;
-    margin: 118px 700px;
+    margin: 100px 700px;
     visibility: hidden;
 }
 
 .card5 {
     border: 1px solid white;
-    margin: -388px 700px;
+    margin: -430px 700px;
     visibility: hidden;
 }
 
